--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "@angular/platform-server": "^19.0.5",
     "@angular/router": "^19.0.5",
     "@angular/ssr": "^19.0.6",
+    "@coreui/angular": "~5.3.7",
+    "@coreui/coreui": "^5.2.0",
+    "@coreui/icons-angular": "~5.3.5",
+    "@popperjs/core": "~2.11.8",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
